<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="170dp"
            android:layout_height="257dp"
            android:layout_marginRight="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:contentDescription="@string/content_description_movie_poster"
            tools:src="@drawable/placeholder_movie_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@android:style/TextAppearance.Large"
                tools:text="Fantastic Beasts and Where to Find Them" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAppearance="@android:style/TextAppearance.Medium"
                tools:text="2016" />

            <TextView
                android:id="@+id/vote_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                tools:text="6.9/10" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/overview"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:textAppearance="@android:style/TextAppearance.Small"
        tools:text="@string/placeholder_movie_overview" />

    <TextView
        android:id="@+id/videos_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/videos"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/videos_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/reviews_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/reviews"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviews_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/review_list_item"/>

</LinearLayout>